# nnm

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: COMMANDS.md  CONFIG.md
src/: app.rs  commands.rs  entity.rs  lib.rs  main.rs  parser.rs  screen.rs
src/app/: config.rs  controller.rs  entity.rs  file.rs  history.rs  parser.rs  prompt.rs  screen.rs  table.rs
src/app/controller/: bookmark_controller.rs  config_controller.rs  history_controller.rs  rss_controller.rs
src/app/table/: row.rs  table.rs
src/table/: mod.rs  row.rs  table.rs
tests/: parser.rs
