[package]
name = "nnm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12" }
tokio = { version = "1.14.0", features = ["full"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.27.0"
unicode-width = "0.1.9"
serde_json = "1.0"
futures = "0.3.30"
